Removed building parameter

--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "4        morning             1                27  1548.307563  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,9 +616,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>device</th>\n",
+       "      <th>building</th>\n",
+       "      <th>room</th>\n",
+       "      <th>weather_type</th>\n",
+       "      <th>date</th>\n",
+       "      <th>from_time</th>\n",
+       "      <th>to_time</th>\n",
+       "      <th>time</th>\n",
+       "      <th>no_of_people</th>\n",
+       "      <th>time_stayed_mins</th>\n",
+       "      <th>power</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3038</th>\n",
+       "      <td>AC</td>\n",
+       "      <td>6</td>\n",
+       "      <td>606</td>\n",
+       "      <td>very hot</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1427.202360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3039</th>\n",
+       "      <td>AC</td>\n",
+       "      <td>6</td>\n",
+       "      <td>606</td>\n",
+       "      <td>very hot</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>9</td>\n",
+       "      <td>58</td>\n",
+       "      <td>1434.310948</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     device  building  room weather_type        date from_time   to_time  \\\n",
+       "3038     AC         6   606     very hot  2018-01-01  10:00:00  11:00:00   \n",
+       "3039     AC         6   606     very hot  2018-01-01  10:00:00  11:00:00   \n",
+       "\n",
+       "         time  no_of_people  time_stayed_mins        power  \n",
+       "3038  morning             8                 7  1427.202360  \n",
+       "3039  morning             9                58  1434.310948  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
