Mean power consumption

--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>device</th>\n",
-       "      <th>building</th>\n",
        "      <th>room</th>\n",
        "      <th>weather_type</th>\n",
        "      <th>date</th>\n",
@@ -76,95 +75,90 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Lights</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>100</td>\n",
        "      <td>hot</td>\n",
-       "      <td>2018-01-05</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>00:00:00</td>\n",
        "      <td>01:00:00</td>\n",
-       "      <td>02:00:00</td>\n",
        "      <td>midnight</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>1496.960792</td>\n",
+       "      <td>3</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1528.898438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Lights</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>hot</td>\n",
-       "      <td>2018-01-05</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>100</td>\n",
+       "      <td>very cold</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>00:00:00</td>\n",
        "      <td>01:00:00</td>\n",
-       "      <td>02:00:00</td>\n",
        "      <td>midnight</td>\n",
-       "      <td>4</td>\n",
-       "      <td>44</td>\n",
-       "      <td>1514.745402</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1512.648438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Lights</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>hot</td>\n",
-       "      <td>2018-01-05</td>\n",
-       "      <td>06:00:00</td>\n",
-       "      <td>07:00:00</td>\n",
-       "      <td>early morning</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1482.252783</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>100</td>\n",
+       "      <td>cold</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>02:00:00</td>\n",
+       "      <td>03:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>4</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1521.007812</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Lights</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>hot</td>\n",
-       "      <td>2018-01-05</td>\n",
-       "      <td>07:00:00</td>\n",
-       "      <td>08:00:00</td>\n",
-       "      <td>morning</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1544.158696</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>100</td>\n",
+       "      <td>cold</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>03:00:00</td>\n",
+       "      <td>04:00:00</td>\n",
+       "      <td>midnight</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1499.714844</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Lights</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101</td>\n",
-       "      <td>hot</td>\n",
-       "      <td>2018-01-05</td>\n",
-       "      <td>07:00:00</td>\n",
-       "      <td>08:00:00</td>\n",
-       "      <td>morning</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1548.307563</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>100</td>\n",
+       "      <td>very cold</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>05:00:00</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>early morning</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1507.480469</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   device  building  room weather_type        date from_time   to_time  \\\n",
-       "0  Lights         1   101          hot  2018-01-05  01:00:00  02:00:00   \n",
-       "1  Lights         1   101          hot  2018-01-05  01:00:00  02:00:00   \n",
-       "2  Lights         1   101          hot  2018-01-05  06:00:00  07:00:00   \n",
-       "3  Lights         1   101          hot  2018-01-05  07:00:00  08:00:00   \n",
-       "4  Lights         1   101          hot  2018-01-05  07:00:00  08:00:00   \n",
+       "  device  room weather_type        date from_time   to_time           time  \\\n",
+       "0     AC   100          hot  2018-01-01  00:00:00  01:00:00       midnight   \n",
+       "1     AC   100    very cold  2018-01-01  00:00:00  01:00:00       midnight   \n",
+       "2     AC   100         cold  2018-01-01  02:00:00  03:00:00       midnight   \n",
+       "3     AC   100         cold  2018-01-01  03:00:00  04:00:00       midnight   \n",
+       "4     AC   100    very cold  2018-01-01  05:00:00  06:00:00  early morning   \n",
        "\n",
-       "            time  no_of_people  time_stayed_mins        power  \n",
-       "0       midnight            11                11  1496.960792  \n",
-       "1       midnight             4                44  1514.745402  \n",
-       "2  early morning             7                 3  1482.252783  \n",
-       "3        morning             2                13  1544.158696  \n",
-       "4        morning             1                27  1548.307563  "
+       "   no_of_people  time_stayed_mins        power  \n",
+       "0             3                21  1528.898438  \n",
+       "1            10                 5  1512.648438  \n",
+       "2             4                22  1521.007812  \n",
+       "3             3                 5  1499.714844  \n",
+       "4             2                35  1507.480469  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +254,7 @@
        "4     AC     low cold          night         8     51"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +338,7 @@
        "4  2018-01-01  04:00:00  10650"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
