Trial by people, sort

--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -422,275 +422,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_df = sample_df.assign(priorities=priorities.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_priorities = sample_df.sort_values('priorities')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>from_time</th>\n",
-       "      <th>power</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>10160</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          date from_time  power\n",
-       "10  2018-01-01  10:00:00  10160"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "power"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10411.42578125"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample_total_power"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>device</th>\n",
-       "      <th>room</th>\n",
-       "      <th>weather_type</th>\n",
-       "      <th>date</th>\n",
-       "      <th>from_time</th>\n",
-       "      <th>to_time</th>\n",
-       "      <th>time</th>\n",
-       "      <th>no_of_people</th>\n",
-       "      <th>time_stayed_mins</th>\n",
-       "      <th>power</th>\n",
-       "      <th>priorities</th>\n",
-       "      <th>diff</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2183</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>108</td>\n",
-       "      <td>very hot</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>11:00:00</td>\n",
-       "      <td>morning</td>\n",
-       "      <td>3</td>\n",
-       "      <td>51</td>\n",
-       "      <td>1496.125000</td>\n",
-       "      <td>14</td>\n",
-       "      <td>29.335784</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>100</td>\n",
-       "      <td>low hot</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>11:00:00</td>\n",
-       "      <td>morning</td>\n",
-       "      <td>14</td>\n",
-       "      <td>47</td>\n",
-       "      <td>1514.121094</td>\n",
-       "      <td>38</td>\n",
-       "      <td>32.215342</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1883</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>107</td>\n",
-       "      <td>low cold</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>11:00:00</td>\n",
-       "      <td>morning</td>\n",
-       "      <td>12</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1519.156250</td>\n",
-       "      <td>49</td>\n",
-       "      <td>56.265046</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1882</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>107</td>\n",
-       "      <td>cold</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>11:00:00</td>\n",
-       "      <td>morning</td>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1492.652344</td>\n",
-       "      <td>67</td>\n",
-       "      <td>99.510156</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>100</td>\n",
-       "      <td>very cold</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>11:00:00</td>\n",
-       "      <td>morning</td>\n",
-       "      <td>3</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1482.558594</td>\n",
-       "      <td>97</td>\n",
-       "      <td>67.389027</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>810</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>103</td>\n",
-       "      <td>very cold</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>11:00:00</td>\n",
-       "      <td>morning</td>\n",
-       "      <td>2</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1448.660156</td>\n",
-       "      <td>97</td>\n",
-       "      <td>51.737863</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4423</th>\n",
-       "      <td>AC</td>\n",
-       "      <td>117</td>\n",
-       "      <td>very cold</td>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>10:00:00</td>\n",
-       "      <td>11:00:00</td>\n",
-       "      <td>morning</td>\n",
-       "      <td>14</td>\n",
-       "      <td>29</td>\n",
-       "      <td>1458.152344</td>\n",
-       "      <td>97</td>\n",
-       "      <td>50.281115</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     device  room weather_type        date from_time   to_time     time  \\\n",
-       "2183     AC   108     very hot  2018-01-01  10:00:00  11:00:00  morning   \n",
-       "6        AC   100      low hot  2018-01-01  10:00:00  11:00:00  morning   \n",
-       "1883     AC   107     low cold  2018-01-01  10:00:00  11:00:00  morning   \n",
-       "1882     AC   107         cold  2018-01-01  10:00:00  11:00:00  morning   \n",
-       "7        AC   100    very cold  2018-01-01  10:00:00  11:00:00  morning   \n",
-       "810      AC   103    very cold  2018-01-01  10:00:00  11:00:00  morning   \n",
-       "4423     AC   117    very cold  2018-01-01  10:00:00  11:00:00  morning   \n",
-       "\n",
-       "      no_of_people  time_stayed_mins        power  priorities       diff  \n",
-       "2183             3                51  1496.125000          14  29.335784  \n",
-       "6               14                47  1514.121094          38  32.215342  \n",
-       "1883            12                27  1519.156250          49  56.265046  \n",
-       "1882            14                15  1492.652344          67  99.510156  \n",
-       "7                3                22  1482.558594          97  67.389027  \n",
-       "810              2                28  1448.660156          97  51.737863  \n",
-       "4423            14                29  1458.152344          97  50.281115  "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sample_priorities.assign(diff=sample_priorities['power'] / sample_priorities['time_stayed_mins'])"
+    "sample_df = sample_df.assign(priorities=priorities.values)\n",
+    "sample_df = sample_df.sort_values(['priorities', 'no_of_people'], ascending=[True,False])"
    ]
   },
   {
