--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -422,13 +422,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "sample_df = sample_df.assign(priorities=priorities.values)\n",
-    "sample_df = sample_df.sort_values(['priorities', 'no_of_people'], ascending=[True,False])"
+    "sample_df = sample_df.sort_values(['priorities', 'no_of_people'], ascending=[True,False]).reset_index()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
