Experiments on reset index and sortvalues

--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -427,22 +427,8 @@
    "outputs": [],
    "source": [
     "sample_df = sample_df.assign(priorities=priorities.values)\n",
-    "sample_df = sample_df.sort_values(['priorities', 'no_of_people'], ascending=[True,False]).reset_index()"
+    "sample_df = sample_df.sort_values(['priorities', 'no_of_people'], ascending=[True,False])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
