Tail of dataframe - changed to number of rooms

--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -429,6 +429,28 @@
     "sample_df = sample_df.assign(priorities=priorities.values)\n",
     "sample_df = sample_df.sort_values(['priorities', 'no_of_people'], ascending=[True,False])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_of_people_index = sample_df.iloc[[-2]]['no_of_people'].index[0]\n",
+    "\n",
+    "last_one_room = sample_df.iloc[[-2]]['room'].values[0]\n",
+    "last_no_of_people = sample_df.iloc[[-1]]['no_of_people'].values[0]\n",
+    "last_room = sample_df.iloc[[-1]]['room'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Move' + str(last_no_of_people) + 'people from ' + str(last_room) + 'to' + )"
+   ]
   }
  ],
  "metadata": {
