Moving people logic

--- a/main/experiment/trial.ipynb
+++ b/main/experiment/trial.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,12 +445,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Move 2 people from 103 to 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Move ' + str(last_no_of_people) + ' people from ' + str(last_room) + ' to ' + str(last_one_room))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print('Move' + str(last_no_of_people) + 'people from ' + str(last_room) + 'to' + )"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -469,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
